Correct alignment of list items in How To page

--- a/styles.css
+++ b/styles.css
@@ -51,7 +51,7 @@ span {
 }/*https://stackoverflow.com/questions/55126972/how-to-centre-center-html-audio-player-to-middle-of-webpage*/
 
 
-ol li {
+ol {
     text-align: left;
     margin-left: 35%;/*https://stackoverflow.com/questions/19364836/how-to-center-ordered-list-number-in-html*/
     font-size: 25px;
